# onlyfambooks-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  catalogue.py  pyproject.toml  render.yaml  requirements.txt
data/: faq.html.jinja  faq.yaml
tests/: test_api.py  test_catalogue.py
